:recycle: SD projects refactoring

--- a/3rd year/1st Semester/SD/guiao2cont/pom.xml
+++ b/3rd year/1st Semester/SD/guiao2cont/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>pt.uminho.dss</groupId>
-    <artifactId>guiao3</artifactId>
+    <artifactId>guiao2cont</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
