--- a/3rd year/2nd Semester/PL/jcr_exercises/Makefile
+++ b/3rd year/2nd Semester/PL/jcr_exercises/Makefile
@@ -10,5 +10,13 @@ ex13:
 	flex ex13.l
 	gcc -o ex13.exe lex.yy.c -lfl
 
+ex14:
+	flex ex14.l
+	gcc -o ex14.exe lex.yy.c -lfl
+
+ex15:
+	flex ex15.l
+	gcc -o ex15.exe lex.yy.c -lfl
+
 clean:
 	rm *.exe
