--- a/4rd year/SDB/guiao2/Vagrantfile
+++ b/4rd year/SDB/guiao2/Vagrantfile
@@ -35,6 +35,7 @@ Vagrant.configure("2") do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
+  # config.vm.network "private_network", ip: "192.168.33.10"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
@@ -51,14 +52,9 @@ Vagrant.configure("2") do |config|
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
   #
-  # config.vm.provider "virtualbox" do |vb|
-  #   # Display the VirtualBox GUI when booting the machine
-  #   vb.gui = true
-  #
-  #   # Customize the amount of memory on the VM:
-  config.vm.provider "virtualbox" do |v|
-    v.memory = 512
-    v.cpus = 1
+  config.vm.provider "virtualbox" do |vb|
+     vb.memory = 512
+     vb.cpus = 1
   end
   #
   # View the documentation for the provider you are using for more
@@ -67,6 +63,7 @@ Vagrant.configure("2") do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
+
   config.vm.provision "shell", inline: <<-SHELL
     apt-get -y update
     apt-get -y upgrade
@@ -83,7 +80,4 @@ Vagrant.configure("2") do |config|
     vm2.vm.network "private_network", ip: "10.0.0.102"
   end
 
-
-end
-
-
+ end
