--- a/4rd year/2nd_semester/TF/lab1/pom.xml
+++ b/4rd year/2nd_semester/TF/lab1/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
