Adds ficha2 from SI class

--- a/4rd year/2nd_semester/TF/lab1/pom.xml
+++ b/4rd year/2nd_semester/TF/lab1/pom.xml
@@ -11,17 +11,17 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
-    <properties>
+    <!-- <properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
-    </properties>
+    </properties> -->
 
     <dependencies>
         <dependency>
